exports[`Suite transform should be able to define agent mutators 1`] = `
Object {
  "foo": "bar",
  "name": "Ada Lovelace",
  "year": 1815,
}
`;

exports[`Suite transform should transform a definition using mutators 1`] = `
Object {
  "extra": "attribute",
  "name": "Ada Lovelace",
  "year": 1852,
}
`;
